<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2011 The Code Bakers
 * Authors: Cleuton Sampaio e Francisco Rodrigues
 * e-mail: thecodebakers@gmail.com
 * Project: http://code.google.com/p/hercules-password-protector
 * Site: http://www.thecodebakers.org
 *
 * Licensed under the GNU GPL, Version 3.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://gplv3.fsf.org/
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * 
 * @author Cleuton Sampaio e Francisco Rogrigues - thecodebakers@gmail.com
 */
 -->

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical"
	android:fadeScrollbars="false">
	
	<TableLayout
    		xmlns:android="http://schemas.android.com/apk/res/android"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent">
 
 	
	   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	              xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	              android:orientation="vertical"
	              android:layout_width="fill_parent"
	              android:layout_height="fill_parent">
	  			  <com.google.ads.AdView android:id="@+id/adViewAjuda"
	                         android:layout_width="wrap_content"
	                         android:layout_height="wrap_content"
	                         ads:adUnitId="[SEU ID]"
	                         ads:adSize="BANNER"
	                         ads:loadAdOnCreate="true"/>
	                    
		                		
	  </LinearLayout>
	
	
	  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
		android:layout_width="fill_parent"
	  	android:layout_height="fill_parent"
	  	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads">
	  	
	  	
			
	
		<ImageView
			android:layout_centerHorizontal="true"
			android:src="@drawable/logo"
			android:id="@+id/imglogo" 
			android:adjustViewBounds="true"
			android:onClick="web"
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			></ImageView>	  	

		<TextView 
			android:layout_below="@+id/imglogo"
			style="@style/titulo"
			android:text="@string/tit_ajuda2" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit2"
			android:layout_centerHorizontal="true"
	    	/>
	    	
		<ImageView
			android:layout_below="@+id/tit2"
			android:layout_alignParentLeft="true"
			android:id="@+id/img1"
			android:src="@drawable/cadeado_fechado" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			></ImageView>
		<TextView 
			android:layout_toRightOf="@+id/img1"
			android:layout_below="@+id/tit2"
		 	style="@style/titulo"
			android:text="@string/tit_abrir" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit3"
			/>
			
		<ImageView
			android:layout_below="@+id/img1"
			android:layout_alignParentLeft="true"
			android:id="@+id/img2"
			android:src="@drawable/cadeado_aberto" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			></ImageView>
		<TextView 
			android:layout_toRightOf="@+id/img2"
			android:layout_below="@+id/img1"
		 	style="@style/titulo"
			android:text="@string/tit_fechar" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit4"
			/>	
			
		<ImageView
			android:layout_below="@+id/img2"
			android:layout_alignParentLeft="true"
			android:id="@+id/img3"
			android:src="@drawable/ok" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			></ImageView>
		<TextView 
			android:layout_toRightOf="@+id/img3"
			android:layout_below="@+id/img2"
		 	style="@style/titulo"
			android:text="@string/tit_ok" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit5"
			/>	
					
		<ImageView
			android:layout_below="@+id/img3"
			android:layout_alignParentLeft="true"
			android:id="@+id/img4"
			android:src="@drawable/cancelar" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			></ImageView>
		<TextView 
			android:layout_toRightOf="@+id/img4"
			android:layout_below="@+id/img3"
		 	style="@style/titulo"
			android:text="@string/tit_cancelar" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit6"
			/>	

		<ImageView
			android:layout_below="@+id/img4"
			android:layout_alignParentLeft="true"
			android:id="@+id/img5"
			android:src="@drawable/inserir_registro" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			></ImageView>
		<TextView 
			android:layout_toRightOf="@+id/img5"
			android:layout_below="@+id/img4"
		 	style="@style/titulo"
			android:text="@string/tit_novo" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit7"
			/>	
			
		<TextView 
			android:layout_below="@+id/img5"
		 	style="@style/titulo"
			android:text="@string/tit_ajuda3" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit8"
			/>				

		<TextView 
			android:layout_below="@+id/tit8"
		 	style="@style/titulo"
			android:text="@string/tit_ajuda4" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit9"
			/>				



		<TextView 
			android:layout_below="@+id/tit9"
		 	style="@style/titulo"
			android:text="@string/tit_ajuda5" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit10"
			/>

		<TextView 
			android:layout_below="@+id/tit10"
		 	style="@style/titulo"
			android:text="@string/tit_ajuda6" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit11"
			/>

		<TextView 
			android:layout_below="@+id/tit11"
		 	style="@style/titulo"
			android:text="@string/tit_ajuda7" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit12"
			/>

		<TextView 
			android:layout_below="@+id/tit12"
		 	style="@style/titulo_link"
			android:text="@string/tit_ajuda8" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit13"
			android:clickable="true"
			android:onClick="mostrarManual"
			android:layout_centerHorizontal="true"
			/>


			
		<ImageView
			android:layout_below="@+id/tit13"
			android:layout_centerHorizontal="true"
			android:id="@+id/img6"
			android:src="@drawable/polegar_positivo" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:onClick="fechar"/>
	 	
	 	
	</RelativeLayout>

  </TableLayout>
</ScrollView>
